k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practica-cicd
  labels:
    app: practica-cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: practica-cicd
  template:
    metadata:
      labels:
        app: practica-cicd
    spec:
      containers:
      - name: practica-cicd
        image: tu-usuario/tu-imagen:latest  # Reemplázalo con tu imagen de Docker
        ports:
        - containerPort: 5000
