k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practica-cicd-service
spec:
  selector:
    app: practica-cicd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
